deploy/k8s/mainfest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workorder-api
  namespace: tools
  labels:
    app: workorder-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workorder-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: workorder-api
    spec:
      containers:
        - name: workorder-api
          image: "container-image-registry.theautomation.nl/tools/workorder-api:latest@sha256:990a304e4f80b1c1b69725d7a1b105f4e3bf01aaa57451ac363e047eedc669d0"
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: workorder-api-data
              mountPath: /app
      volumes:
        - name: workorder-api-data
          persistentVolumeClaim:
            claimName: pvc-nfs-workorder-api-data
      imagePullSecrets:
        - name: container-image-registry-credentials

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workorder-worker
  namespace: tools
  labels:
    app: workorder-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workorder-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: workorder-worker
    spec:
      containers:
        - name: workorder-worker
          image: "container-image-registry.theautomation.nl/tools/workorder-worker:latest@sha256:990a304e4f80b1c1b69725d7a1b105f4e3bf01aaa57451ac363e047eedc669d0"
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - name: workorder-worker-data
              mountPath: /app
      volumes:
        - name: workorder-worker-data
          persistentVolumeClaim:
            claimName: pvc-nfs-workorder-worker-data
      imagePullSecrets:
        - name: container-image-registry-credentials

---
kind: Service
apiVersion: v1
metadata:
  name: workorder-api
  namespace: tools
  labels:
    app: workorder-api
spec:
  selector:
    app: workorder-api
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: workorder-api
  namespace: tools
  labels:
    app: workorder-api
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx-private
  rules:
    - host: workorder-api.k8s.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: workorder-api
                port:
                  number: 8000
