deploy/k8s/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workorder-mysql
  namespace: tools
  labels:
    app: workorder-mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: workorder-mysql
  template:
    metadata:
      labels:
        app: workorder-mysql
    spec:
      containers:
        - name: workorder-mysql
          image: mysql:8.0
          resources: {}
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: workorder-db
              mountPath: /var/lib/mysql
      volumes:
        - name: workorder-db
          persistentVolumeClaim:
            claimName: pvc-iscsi-workorder-db

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workorder-api
  namespace: tools
  labels:
    app: workorder-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workorder-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: workorder-api
    spec:
      containers:
        - name: workorder-api
          image: "container-image-registry.theautomation.nl/tools/workorder-api:latest@sha256:02b8c2f48cdf4ff1d5220c9bf6799e29c1d9da309594f139632b1281a52f2e58"
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 10
            periodSeconds: 20
      imagePullSecrets:
        - name: container-image-registry-credentials

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workorder-worker
  namespace: tools
  labels:
    app: workorder-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workorder-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: workorder-worker
    spec:
      containers:
        - name: workorder-worker
          image: "container-image-registry.theautomation.nl/tools/workorder-worker:latest@sha256:2ee4667202156c639892f304cc766c51d6808481dd33f3c9c142dd2c8e2597df"
          resources: {}
      imagePullSecrets:
        - name: container-image-registry-credentials

---
kind: Service
apiVersion: v1
metadata:
  name: workorder-mysql
  namespace: tools
  labels:
    app: workorder-mysql
spec:
  selector:
    app: workorder-mysql
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306

---
kind: Service
apiVersion: v1
metadata:
  name: workorder-api
  namespace: tools
  labels:
    app: workorder-api
spec:
  selector:
    app: workorder-api
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: workorder-api
  namespace: tools
  labels:
    app: workorder-api
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx-private
  rules:
    - host: workorder-api.k8s.lan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: workorder-api
                port:
                  number: 8000
